@@ -10,6 +10,7 @@
     * Add Artha, looking up synonyms and antonyms.
     * Add MyTourbook, excellent route planner, and GPS log analyser software.
     * Do not store downloaded files in /var/cache/ailurus/ any more.
+    * Add RouteConverter, converts between different GPS track formats.
 
 2010-07-26 Homer Xing <homer.xing@gmail.com>
 
